- 
    
Bug
 - 
    Resolution: Done
 - 
    
  Not Evaluated                     
     - 
    Qt Creator 4.5.0-rc1
 - 
    None
 
- 
        d2784c68053ecbaacfced84161cd7750cbbd9f0f
 
- Attach to Running Application
 - Pick a kit with CDB and choose any running app
 - RunControlPrivate is initialized without RunConfiguration, therefore it doesn't have a device
 - Try to interrupt
 - CdbEngine::doInterruptInferior dereferences the device without validating it
 - CRASH!
 
- relates to
 - 
                    
QTCREATORBUG-19163 Attach to running application not working
-         
     - Closed
 
 -         
 
| For Gerrit Dashboard: QTCREATORBUG-19160 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 209448,2 | Cdb: Do not crash if no device is set | 4.5 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |