src/plugins/debugger/cdb/cdbengine.cpp
@@ -880,7 +880,10 @@ void CdbEngine::doInterruptInferior(SpecialStopMode sm)
     showMessage(QString("Interrupting process %1...").arg(inferiorPid()), LogMisc);
 
     QTC_ASSERT(!m_signalOperation, notifyInferiorStopFailed();  return;);
-    m_signalOperation = runTool()->device()->signalOperation();
+    if (DebuggerRunTool *rt = runTool()) {
+        if (IDevice::ConstPtr device = rt->device())
+            m_signalOperation = device->signalOperation();
+    }
     m_specialStopMode = sm;
     QTC_ASSERT(m_signalOperation, notifyInferiorStopFailed(); return;);
     connect(m_signalOperation.data(), &DeviceProcessSignalOperation::finished,
